// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseTimetableS > arrivalCancelled.xml 1`] = `
{
  "additional": undefined,
  "arrival": {
    "hidden": false,
    "platform": "13",
    "scheduledPlatform": "13",
    "scheduledTime": 2019-03-17T12:58:00.000Z,
    "time": 2019-03-17T12:58:00.000Z,
    "transition": undefined,
    "wingIds": undefined,
  },
  "currentStopPlace": {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": {
    "hidden": false,
    "platform": "13",
    "scheduledPlatform": "13",
    "scheduledTime": 2019-03-17T13:00:00.000Z,
    "time": 2019-03-17T13:00:00.000Z,
    "transition": undefined,
    "wingIds": undefined,
  },
  "id": "6062058741531589910",
  "initialDeparture": 2019-03-16T14:24:00.000Z,
  "mediumId": "6062058741531589910-1903161424",
  "o": "800354",
  "productClass": "S",
  "rawId": "-6062058741531589910-1903161424-13",
  "rawRoute": [
    "Mönchengladbach Hbf",
    "Mönchengladbach-Lürrip",
    "Korschenbroich",
    "Kleinenbroich",
    "Büttgen",
    "Neuss Hbf",
    "Neuss Am Kaiser",
    "Neuss Rheinparkcenter",
    "Düsseldorf-Hamm",
    "Düsseldorf Völklinger Str.",
    "Düsseldorf-Bilk",
    "Düsseldorf Friedrichstadt",
    "test",
    "Düsseldorf-Flingern",
    "Düsseldorf-Gerresheim",
    "Erkrath",
    "Hochdahl",
    "Hochdahl-Millrath",
    "Haan-Gruiten",
    "Wuppertal-Vohwinkel",
    "Wuppertal-Sonnborn",
    "Wuppertal-Zoologischer Garten",
    "Wuppertal-Steinbeck",
    "Wuppertal Hbf",
    "Wuppertal-Unterbarmen",
    "Wuppertal-Barmen",
    "Wuppertal-Oberbarmen",
    "Wuppertal-Langerfeld",
    "Schwelm West",
    "Schwelm",
    "Gevelsberg West",
    "Gevelsberg-Kipp",
    "Gevelsberg Hbf",
    "Gevelsberg-Knapp",
    "Hagen-Westerbauer",
    "Hagen-Heubing",
    "Hagen-Wehringhausen",
    "Hagen Hbf",
  ],
  "routePost": [
    {
      "name": "Düsseldorf-Flingern",
    },
    {
      "name": "Düsseldorf-Gerresheim",
    },
    {
      "name": "Erkrath",
    },
    {
      "name": "Hochdahl",
    },
    {
      "name": "Hochdahl-Millrath",
    },
    {
      "name": "Haan-Gruiten",
    },
    {
      "name": "Wuppertal-Vohwinkel",
    },
    {
      "name": "Wuppertal-Sonnborn",
    },
    {
      "name": "Wuppertal-Zoologischer Garten",
    },
    {
      "name": "Wuppertal-Steinbeck",
    },
    {
      "name": "Wuppertal Hbf",
    },
    {
      "name": "Wuppertal-Unterbarmen",
    },
    {
      "name": "Wuppertal-Barmen",
    },
    {
      "name": "Wuppertal-Oberbarmen",
    },
    {
      "name": "Wuppertal-Langerfeld",
    },
    {
      "name": "Schwelm West",
    },
    {
      "name": "Schwelm",
    },
    {
      "name": "Gevelsberg West",
    },
    {
      "name": "Gevelsberg-Kipp",
    },
    {
      "name": "Gevelsberg Hbf",
    },
    {
      "name": "Gevelsberg-Knapp",
    },
    {
      "name": "Hagen-Westerbauer",
    },
    {
      "name": "Hagen-Heubing",
    },
    {
      "name": "Hagen-Wehringhausen",
    },
    {
      "name": "Hagen Hbf",
    },
  ],
  "routePre": [
    {
      "name": "Mönchengladbach Hbf",
    },
    {
      "name": "Mönchengladbach-Lürrip",
    },
    {
      "name": "Korschenbroich",
    },
    {
      "name": "Kleinenbroich",
    },
    {
      "name": "Büttgen",
    },
    {
      "name": "Neuss Hbf",
    },
    {
      "name": "Neuss Am Kaiser",
    },
    {
      "name": "Neuss Rheinparkcenter",
    },
    {
      "name": "Düsseldorf-Hamm",
    },
    {
      "name": "Düsseldorf Völklinger Str.",
    },
    {
      "name": "Düsseldorf-Bilk",
    },
    {
      "name": "Düsseldorf Friedrichstadt",
    },
  ],
  "scheduledDestination": "Hagen Hbf",
  "substitute": undefined,
  "train": {
    "admin": "800354",
    "line": "8",
    "name": "S 8",
    "number": "30889",
    "type": "S",
  },
}
`;

exports[`parseTimetableS > arrivalWing.xml 1`] = `
{
  "additional": undefined,
  "arrival": {
    "hidden": false,
    "platform": "8",
    "scheduledPlatform": "8",
    "scheduledTime": 2019-03-17T12:32:00.000Z,
    "time": 2019-03-17T12:32:00.000Z,
    "transition": undefined,
    "wingIds": [
      "4550748245722881479-1903170818",
    ],
  },
  "currentStopPlace": {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": {
    "hidden": false,
    "platform": "8 D-G",
    "scheduledPlatform": "8 D-G",
    "scheduledTime": 2019-03-17T12:36:00.000Z,
    "time": 2019-03-17T12:36:00.000Z,
    "transition": undefined,
    "wingIds": undefined,
  },
  "id": "4771830392602697451",
  "initialDeparture": 2019-03-17T08:18:00.000Z,
  "mediumId": "4771830392602697451-1903170818",
  "o": "80",
  "productClass": "F",
  "rawId": "4771830392602697451-1903170818-10",
  "rawRoute": [
    "München Hbf",
    "München-Pasing",
    "Augsburg Hbf",
    "Donauwörth",
    "Nürnberg Hbf",
    "Würzburg Hbf",
    "Fulda",
    "Kassel-Wilhelmshöhe",
    "Göttingen",
    "test",
    "Hamburg-Harburg",
    "Hamburg Hbf",
    "Hamburg Dammtor",
    "Hamburg-Altona",
  ],
  "routePost": [
    {
      "name": "Hamburg-Harburg",
    },
    {
      "name": "Hamburg Hbf",
    },
    {
      "name": "Hamburg Dammtor",
    },
    {
      "name": "Hamburg-Altona",
    },
  ],
  "routePre": [
    {
      "name": "München Hbf",
    },
    {
      "name": "München-Pasing",
    },
    {
      "name": "Augsburg Hbf",
    },
    {
      "name": "Donauwörth",
    },
    {
      "name": "Nürnberg Hbf",
    },
    {
      "name": "Würzburg Hbf",
    },
    {
      "name": "Fulda",
    },
    {
      "name": "Kassel-Wilhelmshöhe",
    },
    {
      "name": "Göttingen",
    },
  ],
  "scheduledDestination": "Hamburg-Altona",
  "substitute": undefined,
  "train": {
    "admin": "80",
    "line": undefined,
    "name": "ICE 1680",
    "number": "1680",
    "type": "ICE",
  },
}
`;

exports[`parseTimetableS > arrivalWing.xml 2`] = `
{
  "additional": undefined,
  "arrival": {
    "hidden": false,
    "platform": "8",
    "scheduledPlatform": "8",
    "scheduledTime": 2019-03-17T12:32:00.000Z,
    "time": 2019-03-17T12:32:00.000Z,
    "transition": undefined,
    "wingIds": undefined,
  },
  "currentStopPlace": {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": {
    "hidden": false,
    "platform": "8 A-D",
    "scheduledPlatform": "8 A-D",
    "scheduledTime": 2019-03-17T12:45:00.000Z,
    "time": 2019-03-17T12:45:00.000Z,
    "transition": undefined,
    "wingIds": undefined,
  },
  "id": "4550748245722881479",
  "initialDeparture": 2019-03-17T08:18:00.000Z,
  "mediumId": "4550748245722881479-1903170818",
  "o": "80",
  "productClass": "F",
  "rawId": "-4550748245722881479-1903170818-10",
  "rawRoute": [
    "München Hbf",
    "München-Pasing",
    "Augsburg Hbf",
    "Donauwörth",
    "Nürnberg Hbf",
    "Würzburg Hbf",
    "Fulda",
    "Kassel-Wilhelmshöhe",
    "Göttingen",
    "test",
    "Bremen Hbf",
  ],
  "routePost": [
    {
      "name": "Bremen Hbf",
    },
  ],
  "routePre": [
    {
      "name": "München Hbf",
    },
    {
      "name": "München-Pasing",
    },
    {
      "name": "Augsburg Hbf",
    },
    {
      "name": "Donauwörth",
    },
    {
      "name": "Nürnberg Hbf",
    },
    {
      "name": "Würzburg Hbf",
    },
    {
      "name": "Fulda",
    },
    {
      "name": "Kassel-Wilhelmshöhe",
    },
    {
      "name": "Göttingen",
    },
  ],
  "scheduledDestination": "Bremen Hbf",
  "substitute": undefined,
  "train": {
    "admin": "80",
    "line": undefined,
    "name": "ICE 1580",
    "number": "1580",
    "type": "ICE",
  },
}
`;

exports[`parseTimetableS > cancelled.xml 1`] = `
{
  "additional": undefined,
  "arrival": {
    "hidden": false,
    "platform": "13",
    "scheduledPlatform": "13",
    "scheduledTime": 2019-03-17T12:58:00.000Z,
    "time": 2019-03-17T12:58:00.000Z,
    "transition": undefined,
    "wingIds": undefined,
  },
  "currentStopPlace": {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": {
    "hidden": false,
    "platform": "13",
    "scheduledPlatform": "13",
    "scheduledTime": 2019-03-17T13:00:00.000Z,
    "time": 2019-03-17T13:00:00.000Z,
    "transition": undefined,
    "wingIds": undefined,
  },
  "id": "6062058741531589910",
  "initialDeparture": 2019-03-16T14:24:00.000Z,
  "mediumId": "6062058741531589910-1903161424",
  "o": "800354",
  "productClass": "S",
  "rawId": "-6062058741531589910-1903161424-13",
  "rawRoute": [
    "Mönchengladbach Hbf",
    "Mönchengladbach-Lürrip",
    "Korschenbroich",
    "Kleinenbroich",
    "Büttgen",
    "Neuss Hbf",
    "Neuss Am Kaiser",
    "Neuss Rheinparkcenter",
    "Düsseldorf-Hamm",
    "Düsseldorf Völklinger Str.",
    "Düsseldorf-Bilk",
    "Düsseldorf Friedrichstadt",
    "test",
    "Düsseldorf-Flingern",
    "Düsseldorf-Gerresheim",
    "Erkrath",
    "Hochdahl",
    "Hochdahl-Millrath",
    "Haan-Gruiten",
    "Wuppertal-Vohwinkel",
    "Wuppertal-Sonnborn",
    "Wuppertal-Zoologischer Garten",
    "Wuppertal-Steinbeck",
    "Wuppertal Hbf",
    "Wuppertal-Unterbarmen",
    "Wuppertal-Barmen",
    "Wuppertal-Oberbarmen",
    "Wuppertal-Langerfeld",
    "Schwelm West",
    "Schwelm",
    "Gevelsberg West",
    "Gevelsberg-Kipp",
    "Gevelsberg Hbf",
    "Gevelsberg-Knapp",
    "Hagen-Westerbauer",
    "Hagen-Heubing",
    "Hagen-Wehringhausen",
    "Hagen Hbf",
  ],
  "routePost": [
    {
      "name": "Düsseldorf-Flingern",
    },
    {
      "name": "Düsseldorf-Gerresheim",
    },
    {
      "name": "Erkrath",
    },
    {
      "name": "Hochdahl",
    },
    {
      "name": "Hochdahl-Millrath",
    },
    {
      "name": "Haan-Gruiten",
    },
    {
      "name": "Wuppertal-Vohwinkel",
    },
    {
      "name": "Wuppertal-Sonnborn",
    },
    {
      "name": "Wuppertal-Zoologischer Garten",
    },
    {
      "name": "Wuppertal-Steinbeck",
    },
    {
      "name": "Wuppertal Hbf",
    },
    {
      "name": "Wuppertal-Unterbarmen",
    },
    {
      "name": "Wuppertal-Barmen",
    },
    {
      "name": "Wuppertal-Oberbarmen",
    },
    {
      "name": "Wuppertal-Langerfeld",
    },
    {
      "name": "Schwelm West",
    },
    {
      "name": "Schwelm",
    },
    {
      "name": "Gevelsberg West",
    },
    {
      "name": "Gevelsberg-Kipp",
    },
    {
      "name": "Gevelsberg Hbf",
    },
    {
      "name": "Gevelsberg-Knapp",
    },
    {
      "name": "Hagen-Westerbauer",
    },
    {
      "name": "Hagen-Heubing",
    },
    {
      "name": "Hagen-Wehringhausen",
    },
    {
      "name": "Hagen Hbf",
    },
  ],
  "routePre": [
    {
      "name": "Mönchengladbach Hbf",
    },
    {
      "name": "Mönchengladbach-Lürrip",
    },
    {
      "name": "Korschenbroich",
    },
    {
      "name": "Kleinenbroich",
    },
    {
      "name": "Büttgen",
    },
    {
      "name": "Neuss Hbf",
    },
    {
      "name": "Neuss Am Kaiser",
    },
    {
      "name": "Neuss Rheinparkcenter",
    },
    {
      "name": "Düsseldorf-Hamm",
    },
    {
      "name": "Düsseldorf Völklinger Str.",
    },
    {
      "name": "Düsseldorf-Bilk",
    },
    {
      "name": "Düsseldorf Friedrichstadt",
    },
  ],
  "scheduledDestination": "Hagen Hbf",
  "substitute": undefined,
  "train": {
    "admin": "800354",
    "line": "8",
    "name": "S 8",
    "number": "30889",
    "type": "S",
  },
}
`;

exports[`parseTimetableS > departureCancelled.xml 1`] = `
{
  "additional": undefined,
  "arrival": {
    "hidden": false,
    "platform": "13",
    "scheduledPlatform": "13",
    "scheduledTime": 2019-03-17T12:58:00.000Z,
    "time": 2019-03-17T12:58:00.000Z,
    "transition": undefined,
    "wingIds": undefined,
  },
  "currentStopPlace": {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": {
    "hidden": false,
    "platform": "13",
    "scheduledPlatform": "13",
    "scheduledTime": 2019-03-17T13:00:00.000Z,
    "time": 2019-03-17T13:00:00.000Z,
    "transition": undefined,
    "wingIds": undefined,
  },
  "id": "6062058741531589910",
  "initialDeparture": 2019-03-16T14:24:00.000Z,
  "mediumId": "6062058741531589910-1903161424",
  "o": "800354",
  "productClass": "S",
  "rawId": "-6062058741531589910-1903161424-13",
  "rawRoute": [
    "Mönchengladbach Hbf",
    "Mönchengladbach-Lürrip",
    "Korschenbroich",
    "Kleinenbroich",
    "Büttgen",
    "Neuss Hbf",
    "Neuss Am Kaiser",
    "Neuss Rheinparkcenter",
    "Düsseldorf-Hamm",
    "Düsseldorf Völklinger Str.",
    "Düsseldorf-Bilk",
    "Düsseldorf Friedrichstadt",
    "test",
    "Düsseldorf-Flingern",
    "Düsseldorf-Gerresheim",
    "Erkrath",
    "Hochdahl",
    "Hochdahl-Millrath",
    "Haan-Gruiten",
    "Wuppertal-Vohwinkel",
    "Wuppertal-Sonnborn",
    "Wuppertal-Zoologischer Garten",
    "Wuppertal-Steinbeck",
    "Wuppertal Hbf",
    "Wuppertal-Unterbarmen",
    "Wuppertal-Barmen",
    "Wuppertal-Oberbarmen",
    "Wuppertal-Langerfeld",
    "Schwelm West",
    "Schwelm",
    "Gevelsberg West",
    "Gevelsberg-Kipp",
    "Gevelsberg Hbf",
    "Gevelsberg-Knapp",
    "Hagen-Westerbauer",
    "Hagen-Heubing",
    "Hagen-Wehringhausen",
    "Hagen Hbf",
  ],
  "routePost": [
    {
      "name": "Düsseldorf-Flingern",
    },
    {
      "name": "Düsseldorf-Gerresheim",
    },
    {
      "name": "Erkrath",
    },
    {
      "name": "Hochdahl",
    },
    {
      "name": "Hochdahl-Millrath",
    },
    {
      "name": "Haan-Gruiten",
    },
    {
      "name": "Wuppertal-Vohwinkel",
    },
    {
      "name": "Wuppertal-Sonnborn",
    },
    {
      "name": "Wuppertal-Zoologischer Garten",
    },
    {
      "name": "Wuppertal-Steinbeck",
    },
    {
      "name": "Wuppertal Hbf",
    },
    {
      "name": "Wuppertal-Unterbarmen",
    },
    {
      "name": "Wuppertal-Barmen",
    },
    {
      "name": "Wuppertal-Oberbarmen",
    },
    {
      "name": "Wuppertal-Langerfeld",
    },
    {
      "name": "Schwelm West",
    },
    {
      "name": "Schwelm",
    },
    {
      "name": "Gevelsberg West",
    },
    {
      "name": "Gevelsberg-Kipp",
    },
    {
      "name": "Gevelsberg Hbf",
    },
    {
      "name": "Gevelsberg-Knapp",
    },
    {
      "name": "Hagen-Westerbauer",
    },
    {
      "name": "Hagen-Heubing",
    },
    {
      "name": "Hagen-Wehringhausen",
    },
    {
      "name": "Hagen Hbf",
    },
  ],
  "routePre": [
    {
      "name": "Mönchengladbach Hbf",
    },
    {
      "name": "Mönchengladbach-Lürrip",
    },
    {
      "name": "Korschenbroich",
    },
    {
      "name": "Kleinenbroich",
    },
    {
      "name": "Büttgen",
    },
    {
      "name": "Neuss Hbf",
    },
    {
      "name": "Neuss Am Kaiser",
    },
    {
      "name": "Neuss Rheinparkcenter",
    },
    {
      "name": "Düsseldorf-Hamm",
    },
    {
      "name": "Düsseldorf Völklinger Str.",
    },
    {
      "name": "Düsseldorf-Bilk",
    },
    {
      "name": "Düsseldorf Friedrichstadt",
    },
  ],
  "scheduledDestination": "Hagen Hbf",
  "substitute": undefined,
  "train": {
    "admin": "800354",
    "line": "8",
    "name": "S 8",
    "number": "30889",
    "type": "S",
  },
}
`;

exports[`parseTimetableS > departureWing.xml 1`] = `
{
  "additional": undefined,
  "arrival": {
    "hidden": false,
    "platform": "4 D-G",
    "scheduledPlatform": "4 D-G",
    "scheduledTime": 2019-03-17T13:22:00.000Z,
    "time": 2019-03-17T13:22:00.000Z,
    "transition": undefined,
    "wingIds": undefined,
  },
  "currentStopPlace": {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": {
    "hidden": false,
    "platform": "4",
    "scheduledPlatform": "4",
    "scheduledTime": 2019-03-17T13:26:00.000Z,
    "time": 2019-03-17T13:26:00.000Z,
    "transition": undefined,
    "wingIds": [
      "8086827825752200553-1903171315",
    ],
  },
  "id": "6523045328284948841",
  "initialDeparture": 2019-03-17T12:46:00.000Z,
  "mediumId": "6523045328284948841-1903171246",
  "o": "80",
  "productClass": "F",
  "rawId": "6523045328284948841-1903171246-5",
  "rawRoute": [
    "Hamburg-Altona",
    "Hamburg Dammtor",
    "Hamburg Hbf",
    "Hamburg-Harburg",
    "test",
    "Göttingen",
    "Kassel-Wilhelmshöhe",
    "Fulda",
    "Würzburg Hbf",
    "Nürnberg Hbf",
    "Ingolstadt Hbf",
    "München Hbf",
  ],
  "routePost": [
    {
      "name": "Göttingen",
    },
    {
      "name": "Kassel-Wilhelmshöhe",
    },
    {
      "name": "Fulda",
    },
    {
      "name": "Würzburg Hbf",
    },
    {
      "name": "Nürnberg Hbf",
    },
    {
      "name": "Ingolstadt Hbf",
    },
    {
      "name": "München Hbf",
    },
  ],
  "routePre": [
    {
      "name": "Hamburg-Altona",
    },
    {
      "name": "Hamburg Dammtor",
    },
    {
      "name": "Hamburg Hbf",
    },
    {
      "name": "Hamburg-Harburg",
    },
  ],
  "scheduledDestination": "München Hbf",
  "substitute": undefined,
  "train": {
    "admin": "80",
    "line": undefined,
    "name": "ICE 1689",
    "number": "1689",
    "type": "ICE",
  },
}
`;

exports[`parseTimetableS > departureWing.xml 2`] = `
{
  "additional": undefined,
  "arrival": {
    "hidden": false,
    "platform": "4 A-C",
    "scheduledPlatform": "4 A-C",
    "scheduledTime": 2019-03-17T13:14:00.000Z,
    "time": 2019-03-17T13:14:00.000Z,
    "transition": undefined,
    "wingIds": undefined,
  },
  "currentStopPlace": {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": {
    "hidden": false,
    "platform": "4",
    "scheduledPlatform": "4",
    "scheduledTime": 2019-03-17T13:26:00.000Z,
    "time": 2019-03-17T13:26:00.000Z,
    "transition": undefined,
    "wingIds": undefined,
  },
  "id": "8086827825752200553",
  "initialDeparture": 2019-03-17T13:15:00.000Z,
  "mediumId": "8086827825752200553-1903171315",
  "o": "80",
  "productClass": "F",
  "rawId": "-8086827825752200553-1903171315-2",
  "rawRoute": [
    "Bremen Hbf",
    "test",
    "Göttingen",
    "Kassel-Wilhelmshöhe",
    "Fulda",
    "Würzburg Hbf",
    "Nürnberg Hbf",
    "Ingolstadt Hbf",
    "München Hbf",
  ],
  "routePost": [
    {
      "name": "Göttingen",
    },
    {
      "name": "Kassel-Wilhelmshöhe",
    },
    {
      "name": "Fulda",
    },
    {
      "name": "Würzburg Hbf",
    },
    {
      "name": "Nürnberg Hbf",
    },
    {
      "name": "Ingolstadt Hbf",
    },
    {
      "name": "München Hbf",
    },
  ],
  "routePre": [
    {
      "name": "Bremen Hbf",
    },
  ],
  "scheduledDestination": "München Hbf",
  "substitute": undefined,
  "train": {
    "admin": "80",
    "line": undefined,
    "name": "ICE 1589",
    "number": "1589",
    "type": "ICE",
  },
}
`;

exports[`parseTimetableS > filteredDueToTime.xml 1`] = `
{
  "additional": undefined,
  "arrival": {
    "hidden": false,
    "platform": "13",
    "scheduledPlatform": "13",
    "scheduledTime": 2019-03-17T10:58:00.000Z,
    "time": 2019-03-17T10:58:00.000Z,
    "transition": undefined,
    "wingIds": undefined,
  },
  "currentStopPlace": {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": {
    "hidden": false,
    "platform": "13",
    "scheduledPlatform": "13",
    "scheduledTime": 2019-03-17T11:00:00.000Z,
    "time": 2019-03-17T11:00:00.000Z,
    "transition": undefined,
    "wingIds": undefined,
  },
  "id": "6062058741531589910",
  "initialDeparture": 2019-03-16T14:24:00.000Z,
  "mediumId": "6062058741531589910-1903161424",
  "o": "800354",
  "productClass": "S",
  "rawId": "-6062058741531589910-1903161424-13",
  "rawRoute": [
    "Mönchengladbach Hbf",
    "Mönchengladbach-Lürrip",
    "Korschenbroich",
    "Kleinenbroich",
    "Büttgen",
    "Neuss Hbf",
    "Neuss Am Kaiser",
    "Neuss Rheinparkcenter",
    "Düsseldorf-Hamm",
    "Düsseldorf Völklinger Str.",
    "Düsseldorf-Bilk",
    "Düsseldorf Friedrichstadt",
    "test",
    "Düsseldorf-Flingern",
    "Düsseldorf-Gerresheim",
    "Erkrath",
    "Hochdahl",
    "Hochdahl-Millrath",
    "Haan-Gruiten",
    "Wuppertal-Vohwinkel",
    "Wuppertal-Sonnborn",
    "Wuppertal-Zoologischer Garten",
    "Wuppertal-Steinbeck",
    "Wuppertal Hbf",
    "Wuppertal-Unterbarmen",
    "Wuppertal-Barmen",
    "Wuppertal-Oberbarmen",
    "Wuppertal-Langerfeld",
    "Schwelm West",
    "Schwelm",
    "Gevelsberg West",
    "Gevelsberg-Kipp",
    "Gevelsberg Hbf",
    "Gevelsberg-Knapp",
    "Hagen-Westerbauer",
    "Hagen-Heubing",
    "Hagen-Wehringhausen",
    "Hagen Hbf",
  ],
  "routePost": [
    {
      "name": "Düsseldorf-Flingern",
    },
    {
      "name": "Düsseldorf-Gerresheim",
    },
    {
      "name": "Erkrath",
    },
    {
      "name": "Hochdahl",
    },
    {
      "name": "Hochdahl-Millrath",
    },
    {
      "name": "Haan-Gruiten",
    },
    {
      "name": "Wuppertal-Vohwinkel",
    },
    {
      "name": "Wuppertal-Sonnborn",
    },
    {
      "name": "Wuppertal-Zoologischer Garten",
    },
    {
      "name": "Wuppertal-Steinbeck",
    },
    {
      "name": "Wuppertal Hbf",
    },
    {
      "name": "Wuppertal-Unterbarmen",
    },
    {
      "name": "Wuppertal-Barmen",
    },
    {
      "name": "Wuppertal-Oberbarmen",
    },
    {
      "name": "Wuppertal-Langerfeld",
    },
    {
      "name": "Schwelm West",
    },
    {
      "name": "Schwelm",
    },
    {
      "name": "Gevelsberg West",
    },
    {
      "name": "Gevelsberg-Kipp",
    },
    {
      "name": "Gevelsberg Hbf",
    },
    {
      "name": "Gevelsberg-Knapp",
    },
    {
      "name": "Hagen-Westerbauer",
    },
    {
      "name": "Hagen-Heubing",
    },
    {
      "name": "Hagen-Wehringhausen",
    },
    {
      "name": "Hagen Hbf",
    },
  ],
  "routePre": [
    {
      "name": "Mönchengladbach Hbf",
    },
    {
      "name": "Mönchengladbach-Lürrip",
    },
    {
      "name": "Korschenbroich",
    },
    {
      "name": "Kleinenbroich",
    },
    {
      "name": "Büttgen",
    },
    {
      "name": "Neuss Hbf",
    },
    {
      "name": "Neuss Am Kaiser",
    },
    {
      "name": "Neuss Rheinparkcenter",
    },
    {
      "name": "Düsseldorf-Hamm",
    },
    {
      "name": "Düsseldorf Völklinger Str.",
    },
    {
      "name": "Düsseldorf-Bilk",
    },
    {
      "name": "Düsseldorf Friedrichstadt",
    },
  ],
  "scheduledDestination": "Hagen Hbf",
  "substitute": undefined,
  "train": {
    "admin": "800354",
    "line": "8",
    "name": "S 8",
    "number": "30889",
    "type": "S",
  },
}
`;

exports[`parseTimetableS > lookbehind.xml 1`] = `
{
  "additional": undefined,
  "arrival": {
    "hidden": false,
    "platform": "16",
    "scheduledPlatform": "16",
    "scheduledTime": 2019-03-17T12:49:00.000Z,
    "time": 2019-03-17T12:49:00.000Z,
    "transition": undefined,
    "wingIds": undefined,
  },
  "currentStopPlace": {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": {
    "hidden": false,
    "platform": "16",
    "scheduledPlatform": "16",
    "scheduledTime": 2019-03-17T12:51:00.000Z,
    "time": 2019-03-17T12:51:00.000Z,
    "transition": undefined,
    "wingIds": undefined,
  },
  "id": "1869793107893408377",
  "initialDeparture": 2019-03-17T10:38:00.000Z,
  "mediumId": "1869793107893408377-1903171038",
  "o": "84",
  "productClass": "F",
  "rawId": "1869793107893408377-1903171038-6",
  "rawRoute": [
    "Amsterdam Centraal",
    "Utrecht Centraal",
    "Arnhem Centraal",
    "Oberhausen Hbf",
    "Duisburg Hbf",
    "test",
    "Köln Hbf",
    "Frankfurt (M)  Flughafen Fernbf",
    "Frankfurt (Main) Hbf",
  ],
  "routePost": [
    {
      "name": "Köln Hbf",
    },
    {
      "name": "Frankfurt (M)  Flughafen Fernbf",
    },
    {
      "name": "Frankfurt (Main) Hbf",
    },
  ],
  "routePre": [
    {
      "name": "Amsterdam Centraal",
    },
    {
      "name": "Utrecht Centraal",
    },
    {
      "name": "Arnhem Centraal",
    },
    {
      "name": "Oberhausen Hbf",
    },
    {
      "name": "Duisburg Hbf",
    },
  ],
  "scheduledDestination": "Frankfurt (Main) Hbf",
  "substitute": undefined,
  "train": {
    "admin": "84",
    "line": undefined,
    "name": "ICE 123",
    "number": "123",
    "type": "ICE",
  },
}
`;

exports[`parseTimetableS > multipleWings.xml 1`] = `
{
  "additional": undefined,
  "arrival": undefined,
  "currentStopPlace": {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": {
    "hidden": false,
    "platform": "34",
    "scheduledPlatform": "34",
    "scheduledTime": 2019-03-17T12:04:00.000Z,
    "time": 2019-03-17T12:04:00.000Z,
    "transition": undefined,
    "wingIds": [
      "2583448959431566845-1903171304",
      "7715731422484591852-1903171304",
    ],
  },
  "id": "4645697665836328305",
  "initialDeparture": 2019-03-17T13:04:00.000Z,
  "mediumId": "4645697665836328305-1903171304",
  "o": "T8",
  "productClass": "D",
  "rawId": "4645697665836328305-1903171304-1",
  "rawRoute": [
    "test",
    "München Harras",
    "München-Solln",
    "Holzkirchen",
    "Darching",
    "Miesbach",
    "Agatharied",
    "Hausham",
    "Schliersee",
    "Fischhausen-Neuhaus",
    "Fischbachau",
    "Geitau",
    "Osterhofen (Oberbay)",
    "Bayrischzell",
  ],
  "routePost": [
    {
      "name": "München Harras",
    },
    {
      "name": "München-Solln",
    },
    {
      "name": "Holzkirchen",
    },
    {
      "name": "Darching",
    },
    {
      "name": "Miesbach",
    },
    {
      "name": "Agatharied",
    },
    {
      "name": "Hausham",
    },
    {
      "name": "Schliersee",
    },
    {
      "name": "Fischhausen-Neuhaus",
    },
    {
      "name": "Fischbachau",
    },
    {
      "name": "Geitau",
    },
    {
      "name": "Osterhofen (Oberbay)",
    },
    {
      "name": "Bayrischzell",
    },
  ],
  "routePre": [],
  "scheduledDestination": "Bayrischzell",
  "substitute": undefined,
  "train": {
    "admin": "T8",
    "line": undefined,
    "name": "BOB 86871",
    "number": "86871",
    "type": "BOB",
  },
}
`;

exports[`parseTimetableS > multipleWings.xml 2`] = `
{
  "additional": undefined,
  "arrival": undefined,
  "currentStopPlace": {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": {
    "hidden": false,
    "platform": "34",
    "scheduledPlatform": "34",
    "scheduledTime": 2019-03-17T12:04:00.000Z,
    "time": 2019-03-17T12:04:00.000Z,
    "transition": undefined,
    "wingIds": undefined,
  },
  "id": "2583448959431566845",
  "initialDeparture": 2019-03-17T13:04:00.000Z,
  "mediumId": "2583448959431566845-1903171304",
  "o": "T8",
  "productClass": "D",
  "rawId": "-2583448959431566845-1903171304-1",
  "rawRoute": [
    "test",
    "München Harras",
    "München-Solln",
    "Holzkirchen",
    "Warngau",
    "Schaftlach",
    "Moosrain",
    "Finsterwald",
    "Gmund (Tegernsee)",
    "Tegernsee",
  ],
  "routePost": [
    {
      "name": "München Harras",
    },
    {
      "name": "München-Solln",
    },
    {
      "name": "Holzkirchen",
    },
    {
      "name": "Warngau",
    },
    {
      "name": "Schaftlach",
    },
    {
      "name": "Moosrain",
    },
    {
      "name": "Finsterwald",
    },
    {
      "name": "Gmund (Tegernsee)",
    },
    {
      "name": "Tegernsee",
    },
  ],
  "routePre": [],
  "scheduledDestination": "Tegernsee",
  "substitute": undefined,
  "train": {
    "admin": "T8",
    "line": undefined,
    "name": "BOB 86971",
    "number": "86971",
    "type": "BOB",
  },
}
`;

exports[`parseTimetableS > multipleWings.xml 3`] = `
{
  "additional": undefined,
  "arrival": undefined,
  "currentStopPlace": {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": {
    "hidden": false,
    "platform": "34",
    "scheduledPlatform": "34",
    "scheduledTime": 2019-03-17T12:04:00.000Z,
    "time": 2019-03-17T12:04:00.000Z,
    "transition": undefined,
    "wingIds": undefined,
  },
  "id": "7715731422484591852",
  "initialDeparture": 2019-03-17T13:04:00.000Z,
  "mediumId": "7715731422484591852-1903171304",
  "o": "T8",
  "productClass": "D",
  "rawId": "-7715731422484591852-1903171304-1",
  "rawRoute": [
    "test",
    "München Harras",
    "München-Solln",
    "Holzkirchen",
    "Warngau",
    "Schaftlach",
    "Reichersbeuern",
    "Bad Tölz",
    "Gaißach",
    "Obergries",
    "Lenggries",
  ],
  "routePost": [
    {
      "name": "München Harras",
    },
    {
      "name": "München-Solln",
    },
    {
      "name": "Holzkirchen",
    },
    {
      "name": "Warngau",
    },
    {
      "name": "Schaftlach",
    },
    {
      "name": "Reichersbeuern",
    },
    {
      "name": "Bad Tölz",
    },
    {
      "name": "Gaißach",
    },
    {
      "name": "Obergries",
    },
    {
      "name": "Lenggries",
    },
  ],
  "routePre": [],
  "scheduledDestination": "Lenggries",
  "substitute": undefined,
  "train": {
    "admin": "T8",
    "line": undefined,
    "name": "BOB 86921",
    "number": "86921",
    "type": "BOB",
  },
}
`;

exports[`parseTimetableS > onlyArrival.xml 1`] = `
{
  "additional": undefined,
  "arrival": {
    "hidden": false,
    "platform": "10",
    "scheduledPlatform": "10",
    "scheduledTime": 2019-03-17T12:24:00.000Z,
    "time": 2019-03-17T12:24:00.000Z,
    "transition": undefined,
    "wingIds": undefined,
  },
  "currentStopPlace": {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": undefined,
  "id": "425081070176277607",
  "initialDeparture": 2019-03-17T11:00:00.000Z,
  "mediumId": "425081070176277607-1903171100",
  "o": "AR",
  "productClass": "D",
  "rawId": "425081070176277607-1903171100-11",
  "rawRoute": [
    "Hamm (Westf)",
    "Kamen",
    "Kamen-Methler",
    "Dortmund Hbf",
    "Bochum Hbf",
    "Wattenscheid",
    "Essen Hbf",
    "Mülheim (Ruhr) Hbf",
    "Duisburg Hbf",
    "Düsseldorf Flughafen",
    "test",
  ],
  "routePost": [],
  "routePre": [
    {
      "name": "Hamm (Westf)",
    },
    {
      "name": "Kamen",
    },
    {
      "name": "Kamen-Methler",
    },
    {
      "name": "Dortmund Hbf",
    },
    {
      "name": "Bochum Hbf",
    },
    {
      "name": "Wattenscheid",
    },
    {
      "name": "Essen Hbf",
    },
    {
      "name": "Mülheim (Ruhr) Hbf",
    },
    {
      "name": "Duisburg Hbf",
    },
    {
      "name": "Düsseldorf Flughafen",
    },
  ],
  "scheduledDestination": "test",
  "substitute": undefined,
  "train": {
    "admin": "AR",
    "line": "RE11",
    "name": "ABR RE11",
    "number": "26712",
    "type": "ABR",
  },
}
`;

exports[`parseTimetableS > onlyDeparture.xml 1`] = `
{
  "additional": undefined,
  "arrival": undefined,
  "currentStopPlace": {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": {
    "hidden": false,
    "platform": "10",
    "scheduledPlatform": "10",
    "scheduledTime": 2019-03-17T12:36:00.000Z,
    "time": 2019-03-17T12:36:00.000Z,
    "transition": undefined,
    "wingIds": undefined,
  },
  "id": "1178432179369711067",
  "initialDeparture": 2019-03-17T12:36:00.000Z,
  "mediumId": "1178432179369711067-1903171236",
  "o": "AR",
  "productClass": "D",
  "rawId": "1178432179369711067-1903171236-1",
  "rawRoute": [
    "test",
    "Düsseldorf Flughafen",
    "Duisburg Hbf",
    "Mülheim (Ruhr) Hbf",
    "Essen Hbf",
    "Wattenscheid",
    "Bochum Hbf",
    "Dortmund Hbf",
    "Kamen-Methler",
    "Kamen",
    "Hamm (Westf)",
    "Soest",
    "Lippstadt",
    "Paderborn Hbf",
  ],
  "routePost": [
    {
      "name": "Düsseldorf Flughafen",
    },
    {
      "name": "Duisburg Hbf",
    },
    {
      "name": "Mülheim (Ruhr) Hbf",
    },
    {
      "name": "Essen Hbf",
    },
    {
      "name": "Wattenscheid",
    },
    {
      "name": "Bochum Hbf",
    },
    {
      "name": "Dortmund Hbf",
    },
    {
      "name": "Kamen-Methler",
    },
    {
      "name": "Kamen",
    },
    {
      "name": "Hamm (Westf)",
    },
    {
      "name": "Soest",
    },
    {
      "name": "Lippstadt",
    },
    {
      "name": "Paderborn Hbf",
    },
  ],
  "routePre": [],
  "scheduledDestination": "Paderborn Hbf",
  "substitute": undefined,
  "train": {
    "admin": "AR",
    "line": "RE11",
    "name": "ABR RE11",
    "number": "26719",
    "type": "ABR",
  },
}
`;

exports[`parseTimetableS > simple1.xml 1`] = `
{
  "additional": undefined,
  "arrival": {
    "hidden": false,
    "platform": "13",
    "scheduledPlatform": "13",
    "scheduledTime": 2019-03-17T12:58:00.000Z,
    "time": 2019-03-17T12:58:00.000Z,
    "transition": undefined,
    "wingIds": undefined,
  },
  "currentStopPlace": {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": {
    "hidden": false,
    "platform": "13",
    "scheduledPlatform": "13",
    "scheduledTime": 2019-03-17T13:00:00.000Z,
    "time": 2019-03-17T13:00:00.000Z,
    "transition": undefined,
    "wingIds": undefined,
  },
  "id": "6062058741531589910",
  "initialDeparture": 2019-03-16T14:24:00.000Z,
  "mediumId": "6062058741531589910-1903161424",
  "o": "800354",
  "productClass": "S",
  "rawId": "-6062058741531589910-1903161424-13",
  "rawRoute": [
    "Mönchengladbach Hbf",
    "Mönchengladbach-Lürrip",
    "Korschenbroich",
    "Kleinenbroich",
    "Büttgen",
    "Neuss Hbf",
    "Neuss Am Kaiser",
    "Neuss Rheinparkcenter",
    "Düsseldorf-Hamm",
    "Düsseldorf Völklinger Str.",
    "Düsseldorf-Bilk",
    "Düsseldorf Friedrichstadt",
    "test",
    "Düsseldorf-Flingern",
    "Düsseldorf-Gerresheim",
    "Erkrath",
    "Hochdahl",
    "Hochdahl-Millrath",
    "Haan-Gruiten",
    "Wuppertal-Vohwinkel",
    "Wuppertal-Sonnborn",
    "Wuppertal-Zoologischer Garten",
    "Wuppertal-Steinbeck",
    "Wuppertal Hbf",
    "Wuppertal-Unterbarmen",
    "Wuppertal-Barmen",
    "Wuppertal-Oberbarmen",
    "Wuppertal-Langerfeld",
    "Schwelm West",
    "Schwelm",
    "Gevelsberg West",
    "Gevelsberg-Kipp",
    "Gevelsberg Hbf",
    "Gevelsberg-Knapp",
    "Hagen-Westerbauer",
    "Hagen-Heubing",
    "Hagen-Wehringhausen",
    "Hagen Hbf",
  ],
  "routePost": [
    {
      "name": "Düsseldorf-Flingern",
    },
    {
      "name": "Düsseldorf-Gerresheim",
    },
    {
      "name": "Erkrath",
    },
    {
      "name": "Hochdahl",
    },
    {
      "name": "Hochdahl-Millrath",
    },
    {
      "name": "Haan-Gruiten",
    },
    {
      "name": "Wuppertal-Vohwinkel",
    },
    {
      "name": "Wuppertal-Sonnborn",
    },
    {
      "name": "Wuppertal-Zoologischer Garten",
    },
    {
      "name": "Wuppertal-Steinbeck",
    },
    {
      "name": "Wuppertal Hbf",
    },
    {
      "name": "Wuppertal-Unterbarmen",
    },
    {
      "name": "Wuppertal-Barmen",
    },
    {
      "name": "Wuppertal-Oberbarmen",
    },
    {
      "name": "Wuppertal-Langerfeld",
    },
    {
      "name": "Schwelm West",
    },
    {
      "name": "Schwelm",
    },
    {
      "name": "Gevelsberg West",
    },
    {
      "name": "Gevelsberg-Kipp",
    },
    {
      "name": "Gevelsberg Hbf",
    },
    {
      "name": "Gevelsberg-Knapp",
    },
    {
      "name": "Hagen-Westerbauer",
    },
    {
      "name": "Hagen-Heubing",
    },
    {
      "name": "Hagen-Wehringhausen",
    },
    {
      "name": "Hagen Hbf",
    },
  ],
  "routePre": [
    {
      "name": "Mönchengladbach Hbf",
    },
    {
      "name": "Mönchengladbach-Lürrip",
    },
    {
      "name": "Korschenbroich",
    },
    {
      "name": "Kleinenbroich",
    },
    {
      "name": "Büttgen",
    },
    {
      "name": "Neuss Hbf",
    },
    {
      "name": "Neuss Am Kaiser",
    },
    {
      "name": "Neuss Rheinparkcenter",
    },
    {
      "name": "Düsseldorf-Hamm",
    },
    {
      "name": "Düsseldorf Völklinger Str.",
    },
    {
      "name": "Düsseldorf-Bilk",
    },
    {
      "name": "Düsseldorf Friedrichstadt",
    },
  ],
  "scheduledDestination": "Hagen Hbf",
  "substitute": undefined,
  "train": {
    "admin": "800354",
    "line": "8",
    "name": "S 8",
    "number": "30889",
    "type": "S",
  },
}
`;

exports[`parseTimetableS > simple2.xml 1`] = `
{
  "additional": undefined,
  "arrival": {
    "hidden": false,
    "platform": "16",
    "scheduledPlatform": "16",
    "scheduledTime": 2019-03-17T12:46:00.000Z,
    "time": 2019-03-17T12:46:00.000Z,
    "transition": undefined,
    "wingIds": undefined,
  },
  "currentStopPlace": {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": {
    "hidden": false,
    "platform": "16",
    "scheduledPlatform": "16",
    "scheduledTime": 2019-03-17T12:48:00.000Z,
    "time": 2019-03-17T12:48:00.000Z,
    "transition": undefined,
    "wingIds": undefined,
  },
  "id": "1869793107893408377",
  "initialDeparture": 2019-03-17T10:38:00.000Z,
  "mediumId": "1869793107893408377-1903171038",
  "o": "84",
  "productClass": "F",
  "rawId": "1869793107893408377-1903171038-6",
  "rawRoute": [
    "Amsterdam Centraal",
    "Utrecht Centraal",
    "Arnhem Centraal",
    "Oberhausen Hbf",
    "Duisburg Hbf",
    "test",
    "Köln Hbf",
    "Frankfurt (M)  Flughafen Fernbf",
    "Frankfurt (Main) Hbf",
  ],
  "routePost": [
    {
      "name": "Köln Hbf",
    },
    {
      "name": "Frankfurt (M)  Flughafen Fernbf",
    },
    {
      "name": "Frankfurt (Main) Hbf",
    },
  ],
  "routePre": [
    {
      "name": "Amsterdam Centraal",
    },
    {
      "name": "Utrecht Centraal",
    },
    {
      "name": "Arnhem Centraal",
    },
    {
      "name": "Oberhausen Hbf",
    },
    {
      "name": "Duisburg Hbf",
    },
  ],
  "scheduledDestination": "Frankfurt (Main) Hbf",
  "substitute": undefined,
  "train": {
    "admin": "84",
    "line": undefined,
    "name": "ICE 123",
    "number": "123",
    "type": "ICE",
  },
}
`;

exports[`parseTimetableS > visibleDueToDelay.xml 1`] = `
{
  "additional": undefined,
  "arrival": {
    "hidden": false,
    "platform": "13",
    "scheduledPlatform": "13",
    "scheduledTime": 2019-03-17T10:58:00.000Z,
    "time": 2019-03-17T10:58:00.000Z,
    "transition": undefined,
    "wingIds": undefined,
  },
  "currentStopPlace": {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": {
    "hidden": false,
    "platform": "13",
    "scheduledPlatform": "13",
    "scheduledTime": 2019-03-17T11:00:00.000Z,
    "time": 2019-03-17T11:00:00.000Z,
    "transition": undefined,
    "wingIds": undefined,
  },
  "id": "6062058741531589910",
  "initialDeparture": 2019-03-16T14:24:00.000Z,
  "mediumId": "6062058741531589910-1903161424",
  "o": "800354",
  "productClass": "S",
  "rawId": "-6062058741531589910-1903161424-13",
  "rawRoute": [
    "Mönchengladbach Hbf",
    "Mönchengladbach-Lürrip",
    "Korschenbroich",
    "Kleinenbroich",
    "Büttgen",
    "Neuss Hbf",
    "Neuss Am Kaiser",
    "Neuss Rheinparkcenter",
    "Düsseldorf-Hamm",
    "Düsseldorf Völklinger Str.",
    "Düsseldorf-Bilk",
    "Düsseldorf Friedrichstadt",
    "test",
    "Düsseldorf-Flingern",
    "Düsseldorf-Gerresheim",
    "Erkrath",
    "Hochdahl",
    "Hochdahl-Millrath",
    "Haan-Gruiten",
    "Wuppertal-Vohwinkel",
    "Wuppertal-Sonnborn",
    "Wuppertal-Zoologischer Garten",
    "Wuppertal-Steinbeck",
    "Wuppertal Hbf",
    "Wuppertal-Unterbarmen",
    "Wuppertal-Barmen",
    "Wuppertal-Oberbarmen",
    "Wuppertal-Langerfeld",
    "Schwelm West",
    "Schwelm",
    "Gevelsberg West",
    "Gevelsberg-Kipp",
    "Gevelsberg Hbf",
    "Gevelsberg-Knapp",
    "Hagen-Westerbauer",
    "Hagen-Heubing",
    "Hagen-Wehringhausen",
    "Hagen Hbf",
  ],
  "routePost": [
    {
      "name": "Düsseldorf-Flingern",
    },
    {
      "name": "Düsseldorf-Gerresheim",
    },
    {
      "name": "Erkrath",
    },
    {
      "name": "Hochdahl",
    },
    {
      "name": "Hochdahl-Millrath",
    },
    {
      "name": "Haan-Gruiten",
    },
    {
      "name": "Wuppertal-Vohwinkel",
    },
    {
      "name": "Wuppertal-Sonnborn",
    },
    {
      "name": "Wuppertal-Zoologischer Garten",
    },
    {
      "name": "Wuppertal-Steinbeck",
    },
    {
      "name": "Wuppertal Hbf",
    },
    {
      "name": "Wuppertal-Unterbarmen",
    },
    {
      "name": "Wuppertal-Barmen",
    },
    {
      "name": "Wuppertal-Oberbarmen",
    },
    {
      "name": "Wuppertal-Langerfeld",
    },
    {
      "name": "Schwelm West",
    },
    {
      "name": "Schwelm",
    },
    {
      "name": "Gevelsberg West",
    },
    {
      "name": "Gevelsberg-Kipp",
    },
    {
      "name": "Gevelsberg Hbf",
    },
    {
      "name": "Gevelsberg-Knapp",
    },
    {
      "name": "Hagen-Westerbauer",
    },
    {
      "name": "Hagen-Heubing",
    },
    {
      "name": "Hagen-Wehringhausen",
    },
    {
      "name": "Hagen Hbf",
    },
  ],
  "routePre": [
    {
      "name": "Mönchengladbach Hbf",
    },
    {
      "name": "Mönchengladbach-Lürrip",
    },
    {
      "name": "Korschenbroich",
    },
    {
      "name": "Kleinenbroich",
    },
    {
      "name": "Büttgen",
    },
    {
      "name": "Neuss Hbf",
    },
    {
      "name": "Neuss Am Kaiser",
    },
    {
      "name": "Neuss Rheinparkcenter",
    },
    {
      "name": "Düsseldorf-Hamm",
    },
    {
      "name": "Düsseldorf Völklinger Str.",
    },
    {
      "name": "Düsseldorf-Bilk",
    },
    {
      "name": "Düsseldorf Friedrichstadt",
    },
  ],
  "scheduledDestination": "Hagen Hbf",
  "substitute": undefined,
  "train": {
    "admin": "800354",
    "line": "8",
    "name": "S 8",
    "number": "30889",
    "type": "S",
  },
}
`;

exports[`parseTimetableS > wings.xml 1`] = `
{
  "additional": undefined,
  "arrival": {
    "hidden": false,
    "platform": "4",
    "scheduledPlatform": "4",
    "scheduledTime": 2019-03-17T13:51:00.000Z,
    "time": 2019-03-17T13:51:00.000Z,
    "transition": undefined,
    "wingIds": [
      "4249721926697031159-1903171328",
    ],
  },
  "currentStopPlace": {
    "evaNumber": "test",
    "name": "test",
  },
  "departure": {
    "hidden": false,
    "platform": "4",
    "scheduledPlatform": "4",
    "scheduledTime": 2019-03-17T13:54:00.000Z,
    "time": 2019-03-17T13:54:00.000Z,
    "transition": undefined,
    "wingIds": [
      "4249721926697031159-1903171328",
    ],
  },
  "id": "7616096009230090656",
  "initialDeparture": 2019-03-17T13:28:00.000Z,
  "mediumId": "7616096009230090656-1903171328",
  "o": "80",
  "productClass": "F",
  "rawId": "7616096009230090656-1903171328-5",
  "rawRoute": [
    "Hamburg Hbf",
    "Hamburg-Harburg",
    "Lüneburg",
    "Uelzen",
    "test",
    "Göttingen",
    "Kassel-Wilhelmshöhe",
    "Fulda",
    "Würzburg Hbf",
    "Treuchtlingen",
    "Donauwörth",
    "Augsburg Hbf",
    "München Hbf",
  ],
  "routePost": [
    {
      "name": "Göttingen",
    },
    {
      "name": "Kassel-Wilhelmshöhe",
    },
    {
      "name": "Fulda",
    },
    {
      "name": "Würzburg Hbf",
    },
    {
      "name": "Treuchtlingen",
    },
    {
      "name": "Donauwörth",
    },
    {
      "name": "Augsburg Hbf",
    },
    {
      "name": "München Hbf",
    },
  ],
  "routePre": [
    {
      "name": "Hamburg Hbf",
    },
    {
      "name": "Hamburg-Harburg",
    },
    {
      "name": "Lüneburg",
    },
    {
      "name": "Uelzen",
    },
  ],
  "scheduledDestination": "München Hbf",
  "substitute": undefined,
  "train": {
    "admin": "80",
    "line": undefined,
    "name": "ICE 1587",
    "number": "1587",
    "type": "ICE",
  },
}
`;
